exports[`FileIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-FileIcon"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16">
  <path
    d="M9.5,0H3.302C2.583,0,2,0.583,2,1.302v13.396C2,15.418,2.583,16,3.302,16h9.396C13.418,16,14,15.418,14,14.697V4.5L9.5,0z M12.74,15H3.26C3.117,15,3,14.883,3,14.739V1.26C3,1.117,3.117,1,3.26,1H9v2.698C9,4.417,9.582,5,10.302,5H13v9.739 C13,14.883,12.883,15,12.74,15z" />
</Icon>
`;

exports[`FileIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-FileIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16">
  <path
    d="M9.5,0H3.302C2.583,0,2,0.583,2,1.302v13.396C2,15.418,2.583,16,3.302,16h9.396C13.418,16,14,15.418,14,14.697V4.5L9.5,0z M12.74,15H3.26C3.117,15,3,14.883,3,14.739V1.26C3,1.117,3.117,1,3.26,1H9v2.698C9,4.417,9.582,5,10.302,5H13v9.739 C13,14.883,12.883,15,12.74,15z" />
</Icon>
`;

exports[`FileIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-FileIcon"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16">
  <path
    d="M9.5,0H3.302C2.583,0,2,0.583,2,1.302v13.396C2,15.418,2.583,16,3.302,16h9.396C13.418,16,14,15.418,14,14.697V4.5L9.5,0z M12.74,15H3.26C3.117,15,3,14.883,3,14.739V1.26C3,1.117,3.117,1,3.26,1H9v2.698C9,4.417,9.582,5,10.302,5H13v9.739 C13,14.883,12.883,15,12.74,15z" />
</Icon>
`;
